♻️ refactor: comprehensive TypeScript modernization and type safety improvements
- Update tsconfig.json to include netlify functions and tests explicitly
- Add comprehensive global type definitions for GTM, config, and APIs
- Enhance type safety across all source files and utilities
- Modernize function signatures and return types
- Improve test type definitions and contracts
- Standardize type imports and exports across codebase

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -49,6 +49,8 @@
   "include": [
     "src/**/*.ts",
     "scripts/**/*.ts",
+    "netlify/functions/**/*.ts",
+    "tests/**/*.ts",
     "*.config.ts",
     ".eleventy.ts",
     "types/**/*.d.ts"
@@ -58,7 +60,6 @@
     "_site",
     "dist",
     "debug-gtm.ts",
-    "tests/**/*",
     "netlify/edge-functions/**/*"
   ]
 }
