--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "license": "ISC",
   "dependencies": {
     "@netlify/functions": "^4.2.2",
+    "@stripe/stripe-js": "^7.8.0",
     "dotenv": "^17.2.1",
     "stripe": "^18.4.0"
   },
@@ -40,13 +41,13 @@
     "@playwright/test": "^1.55.0",
     "@tailwindcss/vite": "^4.1.12",
     "@types/node": "^24.3.0",
-    "typescript-eslint": "^8.40.0",
     "eslint": "^9.34.0",
     "globals": "^16.3.0",
     "happy-dom": "^18.0.1",
     "tailwindcss": "^4.1.12",
     "tsx": "^4.20.5",
     "typescript": "^5.9.2",
+    "typescript-eslint": "^8.40.0",
     "vite": "^7.1.3",
     "vitest": "^3.2.4"
   }
