🔧 chore: simplify configuration and remove deprecated files
- Remove environment-specific .env files (use .env + .env.example pattern)
- Remove Deno configuration (not used in current stack)
- Remove edge functions (using Netlify Functions instead)
- Update Node version to 22.18.0 in .nvmrc
- Clean up netlify.toml (remove edge function config)
- Update .gitignore with .env.test pattern
- Align package.json engine requirements

--- a/.env.example
+++ b/.env.example
@@ -1,72 +1,44 @@
-# Environment Variables Template
-# Copy this file to .env.local and fill in your actual values
-# NEVER commit actual API keys to the repository
+# Café com Vendas - Environment Variables
+# Copy to .env.local and fill with actual values
 
-# Development Environment
-NODE_ENV=development
+# ============================================================================
+# FRONTEND (VITE_ prefix = exposed to browser)
+# ============================================================================
 
-# Gemini API Key
-GEMINI_API_KEY=your_gemini_api_key_here
+# Stripe Publishable Key
+# Get from: https://dashboard.stripe.com/apikeys
+VITE_STRIPE_PUBLIC_KEY=pk_test_your_publishable_key_here
 
-# Upstash Redis Configuration
-UPSTASH_REDIS_REST_URL=https://your-redis-url.upstash.io
-UPSTASH_REDIS_REST_TOKEN=your_upstash_redis_token
+# GTM Container ID (handles all analytics)
+# Default: GTM-T63QRLFT
+VITE_GTM_CONTAINER_ID=GTM-T63QRLFT
 
-# Firecrawl API Key
-FIRECRAWL_API_KEY=fc-your_firecrawl_api_key
+# Cloudinary CDN (image optimization)
+# Default: ds4dhbneq
+VITE_CLOUDINARY_CLOUD_NAME=ds4dhbneq
 
-# Formspree Configuration (Public - Safe to expose)
-VITE_FORMSPREE_FORM_ID=your_form_id_here
+# Formspree (contact form fallback)
+# Default: xanbnrvp
+VITE_FORMSPREE_FORM_ID=xanbnrvp
 
-# Stripe Configuration (Required for payment processing)
-# Get keys from: https://dashboard.stripe.com/apikeys
+# ============================================================================
+# BACKEND (server-side only - NEVER expose)
+# ============================================================================
 
-# Publishable key (safe to expose in frontend)
-VITE_STRIPE_PUBLIC_KEY=pk_test_your_test_publishable_key_here
-
-# Secret key (server-side only - NEVER expose in frontend)
-STRIPE_SECRET_KEY=sk_test_your_test_secret_key_here
-
-# Webhook secret for signature verification
+# Stripe Secret Keys
+# Get from: https://dashboard.stripe.com/apikeys
+STRIPE_SECRET_KEY=sk_test_your_secret_key_here
 STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
 
-# For production, set these in Netlify environment variables:
-# VITE_STRIPE_PUBLIC_KEY=pk_live_your_live_publishable_key_here
-# STRIPE_SECRET_KEY=sk_live_your_live_secret_key_here
-# STRIPE_WEBHOOK_SECRET=whsec_your_live_webhook_secret_here
-
-# ==============================================================================
-# STRIPE TEST CARDS (Development Only)
-# ==============================================================================
-# 🇵🇹 Portugal (90% of customers): 4000 0062 0000 0007 (Requires 3D Secure)
-# 🇧🇷 Brazil (10% of customers):   4000 0007 6000 0002 (Visa Brazil)
-# 🌍 Global fallback:              4242 4242 4242 4242 (Standard success)
-# 
-# Use any future expiry date and any 3-digit CVC
-# See docs/STRIPE_TEST_CARDS.md for complete testing guide
-
-# MailerLite Configuration (Server-side only - NEVER expose in frontend)
-# Get API key from: https://dashboard.mailerlite.com/integrations/api
-MAILERLITE_API_KEY=your_mailerlite_jwt_token_here
+# MailerLite (email automation)
+# Get from: https://dashboard.mailerlite.com/integrations/api
+MAILERLITE_API_KEY=your_jwt_token_here
 MAILERLITE_GROUP_ID=cafe-com-vendas
 
-# MailerLite Integration Notes:
-# - Captures leads from checkout form (payment_status: 'lead')
-# - Updates to 'paid' status after successful Stripe payment
-# - Enables nurture sequences and abandoned cart recovery
-# - Works alongside existing Stripe webhook integration
-
-# Google Tag Manager (GTM) - Controls all analytics and tracking
-VITE_GTM_CONTAINER_ID=GTM-XXXXXXXXX
-
-# Build Environment  
-NETLIFY_SITE_ID=your_netlify_site_id
-NETLIFY_AUTH_TOKEN=your_netlify_auth_token
-
-# Webhook URLs (for reference)
-# Stripe webhook endpoint: https://your-site.netlify.app/.netlify/functions/stripe-webhook
-FORMSPREE_WEBHOOK_URL=https://your-site.netlify.app/.netlify/functions/formspree-webhook
-
-# Contact Information
-CONTACT_EMAIL=team@cafecomvendas.com
-SUPPORT_WHATSAPP=+351912345678
+# ============================================================================
+# TEST CARDS (Development)
+# ============================================================================
+# 🇵🇹 Portugal (3DS): 4000 0062 0000 0007
+# 🇧🇷 Brazil:         4000 0007 6000 0002  
+# 🌍 Global:          4242 4242 4242 4242
+# See: docs/STRIPE_TEST_CARDS.md for complete guide
