🔧 chore(config): optimize build configuration and development tools
• Update Vite config with improved build optimizations and plugin settings
• Enhance Netlify deployment configuration and security headers
• Add Cloudinary utility for optimized image processing
• Improve E2E test configuration and environment handling
• Update Claude Code settings for better development experience
• Optimize section components with improved accessibility and structure

Comprehensive configuration improvements following repository best practices.

--- a/netlify.toml
+++ b/netlify.toml
@@ -27,7 +27,7 @@
 [build.processing.images]
   compress = true
 
-# Development settings - 2025 best practice: use Eleventy dev server directly
+# Development settings - 2025 best practice: use Netlify dev for full-stack development
 [dev]
   command = "eleventy --serve --watch --config=.eleventy.ts"
   targetPort = 8080
