🔧 chore(config): enhance development tools and testing infrastructure
- Add E2E test scripts (test:e2e, test:e2e:report) to package.json
- Add Lighthouse performance audit script with reports output
- Update Playwright configuration for improved test setup
- Optimize Claude Code settings configuration

--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "lint": "eslint .",
     "type-check": "tsc --noEmit --pretty false",
     "test": "vitest run",
-    "verify-apis": "tsx scripts/verify-apis.ts"
+    "test:e2e": "npx playwright test",
+    "test:e2e:report": "npx playwright show-report reports/playwright/html",
+    "verify-apis": "tsx scripts/verify-apis.ts",
+    "lighthouse": "mkdir -p reports && npx lighthouse --output=json,html --output-path=reports/lighthouse"
   },
   "keywords": [
     "landing-page",
