✨ feat(social-proof): add YouTube video embedding with browser fix
- Implement lazy-loading YouTube IFrame API integration
- Add click-to-play functionality for video testimonials
- Fix netlify:dev to use BROWSER=none (official Netlify CLI pattern)
- Add netlify:dev:chrome script for automatic Chrome opening
- Update CSP headers to allow YouTube domains
- Handle cross-origin postMessage warnings (expected localhost behavior)
- Track video engagement through platform analytics

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "engineStrict": true,
   "scripts": {
     "dev": "eleventy --serve --watch --config=.eleventy.ts",
-    "netlify:dev": "NODE_NO_WARNINGS=1 netlify dev",
+    "netlify:dev": "NODE_NO_WARNINGS=1 BROWSER=none netlify dev",
+    "netlify:dev:chrome": "NODE_NO_WARNINGS=1 BROWSER=none netlify dev & sleep 3 && open -a 'Google Chrome' http://localhost:8888",
     "build": "rm -rf _site && NODE_ENV=production vite build && eleventy --config=.eleventy.ts",
     "preview": "npm run build && npx serve _site",
     "lint": "eslint .",
