--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint": "^9.34.0",
     "globals": "^16.3.0",
     "happy-dom": "^18.0.1",
+    "msw": "^2.10.5",
     "tailwindcss": "^4.1.12",
     "tsx": "^4.20.5",
     "typescript": "^5.9.2",
