--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "devDependencies": {
     "@11ty/eleventy": "^3.1.2",
     "@eslint/js": "^9.34.0",
+    "@playwright/mcp": "^0.0.37",
     "@playwright/test": "^1.55.0",
     "@tailwindcss/vite": "^4.1.12",
     "@types/node": "^24.3.0",
@@ -52,17 +53,16 @@
     "eslint": "^9.34.0",
     "globals": "^16.3.0",
     "happy-dom": "^18.0.1",
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
     "msw": "^2.10.5",
     "tailwindcss": "^4.1.12",
     "tsx": "^4.20.5",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.40.0",
     "vite": "^7.1.3",
-    "vitest": "^3.2.4",
-    "husky": "^9.1.6",
-    "lint-staged": "^15.2.10"
-  }
-  ,
+    "vitest": "^3.2.4"
+  },
   "lint-staged": {
     "*.{js,ts}": [
       "eslint --fix"
